# Tourismus

./: .gitignore  README.md  app.py  config.py  logger_config.py  models.py  pyproject.toml  routes.py  test.py
blueprints/analytics/: analytics.py
blueprints/auth/: auth.py
blueprints/budget/: budget.py
blueprints/categories/: categories.py
blueprints/currency/: currency.py
blueprints/expenses/: expenses.py
blueprints/history/: history.py
blueprints/places_dashboard/: places_dashboard.py
blueprints/plans_dash/: plans_dash.py
blueprints/profile/: profile.py
blueprints/visa/: visa.py
consonants_cs/: adt_details.py  constants.py  country_details.py  description.py  month_places.py  safety_rate.py
services/: analytics_service.py  auth_service.py  budget_service.py  category_service.py  expense_service.py  pdf_service.py  places_service.py
static/css/: analytics.css  currency.css  forms.css  history.css  places_dasch.css  plans_dash.css  profile.css  styles.css
static/images/: image_404.avif  image_500.avif
static/js/: script.js
templates/: base.html  confirm_email.html  constants.html  index.html  login.html  register.html  verify_info.html
templates/analytics/: analytics_dashboard.html  analytics_table.html
templates/budget/: _conditional_buttons.html  actual_row.html  actuals_table_fragment.html  add_limit_form.html  budget_dashboard.html  budget_details.html  budget_details_content.html  budget_info.html  budget_innerPart.html  (+9 more)
utils/: admin_views.py  app_chunk.py  decorators.py  error_handlers.py  extensions.py  forms.py  utils.py
(+57 files in other folders)
